Set a max width to prevent the panel from getting too big

--- a/src/scss/base/base.scss
+++ b/src/scss/base/base.scss
@@ -409,6 +409,7 @@ header {
     justify-content: center;
     z-index: 1000;
     min-width: 200px;
+    max-width: 200px;
     margin-top: 5px;
     margin-bottom: 5px;
     padding: 13px 20px 9px;
